--- a/brandcom_ai/index.html
+++ b/brandcom_ai/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/brandcom logo 1.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <title>Babafemi Sanusi - Sales and Marketing Specialist</title>
+    <title>Brandcom AI - Branding and Marketing Automation</title>
   </head>
   <body>
     <div id="root"></div>
